log
Fri, Mar 21, 2025 10:17:55 AM: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025 10:28:44 AM: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:14: error: dereferencing 'void *' pointer [-Werror]
       suma = *num;
              ^~~~
exercises.c:64:12: error: void value not ignored as it ought to be
       suma = *num;
            ^
exercises.c:61:8: error: variable 'suma' set but not used [-Werror=unused-but-set-variable]
    int suma = 0;
        ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a1e2550
Fri, Mar 21, 2025 10:29:08 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:15: error: dereferencing 'void *' pointer [-Werror]
       suma += *num;
               ^~~~
exercises.c:64:15: error: void value not ignored as it ought to be
cc1.exe: all warnings being treated as errors
Compilation failed
f4b7f23
Fri, Mar 21, 2025 10:29:26 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += num;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
ab0b693
Fri, Mar 21, 2025 10:29:48 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += (int*)num;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
abc7b04
Fri, Mar 21, 2025 10:30:06 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:21: error: dereferencing 'void *' pointer [-Werror]
       suma += (int*)*num;
                     ^~~~
exercises.c:64:7: error: invalid use of void expression
       suma += (int*)*num;
       ^~~~
exercises.c:61:8: error: variable 'suma' set but not used [-Werror=unused-but-set-variable]
    int suma = 0;
        ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2fe5866
Fri, Mar 21, 2025 10:30:22 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0deaf16
Fri, Mar 21, 2025 10:31:28 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
47d631d
Fri, Mar 21, 2025 10:35:46 AM: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:81:14: error: comparison between pointer and integer [-Werror]
    while(num == elem){
              ^~
exercises.c:82:7: error: too many arguments to function 'popCurrent'
       popCurrent(L,num);
       ^~~~~~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:32:7: note: declared here
 void *popCurrent(List *L);
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
af25acd
Fri, Mar 21, 2025 10:38:41 AM: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:82:14: error: comparison between pointer and integer [-Werror]
       if(num == elem){
              ^~
exercises.c:83:10: error: too many arguments to function 'popCurrent'
          popCurrent(L,num);
          ^~~~~~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:32:7: note: declared here
 void *popCurrent(List *L);
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2b24be1
Fri, Mar 21, 2025 10:45:41 AM: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 30/70
d3053ac
